force-app/main/default/objects/Account/fields/Autonumerico__c.field-meta.xml
<CustomField>
    <fullName>Autonumerico__c</fullName>
    <externalId>true</externalId>
    <label>Autonumerico</label>
    <length>18</length>
    <type>Text</type>
</CustomField>