force-app/main/default/objects/Account/fields/Last_Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoiced_Amount__c</fullName>
    <label>Last_Invoiced_Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>