force-app/main/default/objects/Account/fields/Total_Oportuniades_Abiertas__c.field-meta.xml
<CustomField>
    <fullName>Total_Oportuniades_Abiertas__c</fullName>
    <label>Total_Oportuniades_Abiertas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>